k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-api
  namespace: saas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saas-api
  template:
    metadata:
      labels:
        app: saas-api
    spec:
      containers:
        - name: api
          image: docker.io/sjmishra1976/saas-api@sha256:b7eee44742b670388e2c5c653428634c55bc0040c8eecfe9a1b5505be72678fa
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "400m"
              memory: "768Mi"
          volumeMounts:
            - name: gcp-sa
              mountPath: /secrets/gcp-sa.json
              subPath: gcp-sa.json
              readOnly: true
      volumes:
        - name: gcp-sa
          secret:
            secretName: saas-secrets
            items:
              - key: GCP_SERVICE_ACCOUNT_KEY_JSON
                path: gcp-sa.json
---
apiVersion: v1
kind: Service
metadata:
  name: saas-api
  namespace: saas
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"default":"saas-api-backendconfig"}'
spec:
  selector:
    app: saas-api
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
