k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-web
  namespace: saas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saas-web
  template:
    metadata:
      labels:
        app: saas-web
    spec:
      containers:
        - name: web
          image: sjmishra1976/web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "384Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: saas-web
  namespace: saas
spec:
  selector:
    app: saas-web
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
